--- a/app/views/notes-tool-1-0/assessment-notes.html
+++ b/app/views/notes-tool-1-0/assessment-notes.html
@@ -17,50 +17,50 @@
 
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
-		<form method="post">
-			<h1 class="govuk-heading-xl">
-				Assessment notes for {{data['person-name']}}
-			</h1>
+		<h1 class="govuk-heading-xl">
+			Assessment notes for {{data['person-name']}}
+		</h1>
 
-			<h2 class="govuk-heading-l">
-				Written notes
-			</h2>
-			<p>
-				You haven't added any written notes yet.
-			</p>
+		<h2 class="govuk-heading-l">
+			Written notes
+		</h2>
+		<p>
+			You haven't added any written notes yet.
+		</p>
+
+		<form method="get" action="new-written-note">
 			<p>
 				{{govukButton({
-					text: "Add written note",
-					href: "confirm-identity"
-				})}}
-			</p>
-
-			<h2 class="govuk-heading-l">
-				Audio recordings
-			</h2>
-			<p>
-				You haven't added any audio recordings yet.
-			</p>
-			<p>
-				{{govukButton({
-					text: "Add audio recording",
-					href: "confirm-identity"
-				})}}
-			</p>
-
-			<h2 class="govuk-heading-l">
-				Images and videos
-			</h2>
-			<p>
-				You haven't added any images or videos yet.
-			</p>
-			<p>
-				{{govukButton({
-					text: "Add images or video",
-					href: "confirm-identity"
+					text: "Add written note"
 				})}}
 			</p>
 		</form>
+
+		<h2 class="govuk-heading-l">
+			Audio recordings
+		</h2>
+		<p>
+			You haven't added any audio recordings yet.
+		</p>
+		<p>
+			{{govukButton({
+				text: "Add audio recording",
+				href: "confirm-identity"
+			})}}
+		</p>
+
+		<h2 class="govuk-heading-l">
+			Images and videos
+		</h2>
+		<p>
+			You haven't added any images or videos yet.
+		</p>
+		<p>
+			{{govukButton({
+				text: "Add images or video",
+				href: "confirm-identity"
+			})}}
+		</p>
 	</div>
 
 	<div class="govuk-grid-column-one-third">
