--- a/app/views/notes-tool-1-0/assessment-notes.html
+++ b/app/views/notes-tool-1-0/assessment-notes.html
@@ -25,7 +25,7 @@
 			Written notes
 		</h2>
 		<p>
-			You haven't added any written notes yet.
+			You have not added any written notes yet.
 		</p>
 
 		<form method="get" action="new-written-note">
@@ -40,7 +40,7 @@
 			Audio recordings
 		</h2>
 		<p>
-			You haven't added any audio recordings yet.
+			You have not added any audio recordings yet.
 		</p>
 		<p>
 			{{govukButton({
@@ -53,7 +53,7 @@
 			Images and videos
 		</h2>
 		<p>
-			You haven't added any images or videos yet.
+			You have not added any images or videos yet.
 		</p>
 		<p>
 			{{govukButton({
@@ -85,6 +85,22 @@
 				<a href="#">Preview assessment notes</a>
 			</p>
 		</div>
+
+		<h3 class="govuk-heading-s">
+			Change or add to these notes in the future
+		</h3>
+
+		<p>
+			You can access these notes using this code:
+		</p>
+
+		<p class="govuk-inset-text">
+			<strong>16wt-8jjs-87d6-wp34</strong>
+		</p>
+
+		<p>
+			You'll need to confirm your identity each time you acces this page using your Local authority email address.
+		</p>
 	</div>
 </div>
 {% endblock %}
