--- a/app/views/notes-tool-1-0/assessment-notes.html
+++ b/app/views/notes-tool-1-0/assessment-notes.html
@@ -99,7 +99,7 @@
 		</p>
 
 		<p>
-			You'll need to confirm your identity each time you acces this page using your Local authority email address.
+			You'll need to confirm your identity each time you access this page using your Local authority email address.
 		</p>
 	</div>
 </div>
