changes, deleted stuff, oops

--- a/app/views/notes-tool-1-0/cancel-written-note.html
+++ b/app/views/notes-tool-1-0/cancel-written-note.html
@@ -48,8 +48,7 @@
 
 			<p>
 				{{govukButton({
-					text: "Continue",
-					href: "assessment-notes"
+					text: "Continue"
 				})}}
 			</p>
 		</form>
