--- a/app/views/notes-tool-1-0/start.html
+++ b/app/views/notes-tool-1-0/start.html
@@ -1,8 +1,6 @@
 
 {% extends "layout.html" %}
 
-{% set serviceName = 'Record a social work assessment' %}
-
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 {% endblock %}
@@ -16,7 +14,7 @@
 		</h1>
 
 		<p class="govuk-body-l">
-			Social workers can use this service to create a document containing notes from a social work assessment.
+			Social workers can use this service to create a document containing notes from a social work assessment visit.
 		</p>
 
 		<p>
