--- a/app/views/notes-tool-1-0/existing-or-new.html
+++ b/app/views/notes-tool-1-0/existing-or-new.html
@@ -1,8 +1,6 @@
 
 {% extends "layout.html" %}
 
-{% set serviceName = 'Record a social work assessment' %}
-
 {% block beforeContent %}
 {% include './includes/phase-banner--alpha.html' %}
 
@@ -18,6 +16,24 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
+			{% set notesInputHtml %}
+			{{ govukInput({
+				label:
+				{
+					text: "Enter secure code",
+					isPageHeading: false
+				},
+				classes: "govuk-input--width-20",
+				hint:
+				{
+					text: ""
+				},
+				id: "notes-id",
+				name: "notes-id",
+				spellcheck: false
+			}) }}
+			{% endset %}
+
 			{{ govukRadios({
 				idPrefix: "existing-new",
 				name: "existing-new",
@@ -25,7 +41,7 @@
 				{
 					legend: 
 					{
-						text: "Do you need to access an existing assessment?",
+						text: "Do you need to access existing assessment visit notes?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
@@ -37,7 +53,11 @@
 				items: [
 				{
 					value: "yes",
-					text: "Yes"
+					text: "Yes",
+					conditional:
+					{
+						html: notesInputHtml
+					}
 				},
 				{
 					value: "no",
