--- a/app/views/notes-tool-1-0/start.html
+++ b/app/views/notes-tool-1-0/start.html
@@ -14,7 +14,7 @@
 		</h1>
 
 		<p class="govuk-body-l">
-			Social workers can use this service to create a document containing notes from a social work assessment visit.
+			Social workers can use this service to record notes, images and audio from a social work assessment visit.
 		</p>
 
 		<p>
