--- a/app/views/notes-tool-1-0/assessment-notes.html
+++ b/app/views/notes-tool-1-0/assessment-notes.html
@@ -8,9 +8,12 @@
 
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
-		<h1 class="govuk-heading-xl">
-			Assessment notes for {{data['person-name']}}
+		<h1 class="govuk-heading-xl govuk-!-margin-bottom-2">
+			{{data['notes-title'] or "Assessment visit notes"}}
 		</h1>
+		<p class="govuk-!-margin-bottom-9">
+			<a href="#" class="govuk-link--no-visited-state">Rename<span class="govuk-visually-hidden"> these assessment visit notes</span></a>
+		</p>
 
 		<h2 class="govuk-heading-l">
 			Written notes
